// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot for error alerts 1`] = `
<div>
  <div
    class="usa-alert usa-alert--error usa-alert--no-icon"
    role="alert"
  >
    <div
      class="usa-alert__body"
    >
      <p
        class="usa-alert__text"
      >
        body
      </p>
    </div>
  </div>
</div>
`;

exports[`should match snapshot for info alerts 1`] = `
<div>
  <div
    class="usa-alert usa-alert--info usa-alert--no-icon"
    role="alert"
  >
    <div
      class="usa-alert__body"
    >
      <p
        class="usa-alert__text"
      >
        body
      </p>
    </div>
  </div>
</div>
`;

exports[`should match snapshot for success alerts 1`] = `
<div>
  <div
    class="usa-alert usa-alert--success usa-alert--no-icon"
    role="alert"
  >
    <div
      class="usa-alert__body"
    >
      <p
        class="usa-alert__text"
      >
        body
      </p>
    </div>
  </div>
</div>
`;

exports[`should match snapshot for warning alerts 1`] = `
<div>
  <div
    class="usa-alert usa-alert--warning usa-alert--no-icon"
    role="alert"
  >
    <div
      class="usa-alert__body"
    >
      <p
        class="usa-alert__text"
      >
        body
      </p>
    </div>
  </div>
</div>
`;
